@@ -3,6 +3,17 @@
 	* src/baobab.c:
 	* src/baobab.h:
 	* src/baobab-scan.c:
+	* src/baobab-treeview.c:
+	* src/baobab-treeview.h:
+	* src/callbacks.c:
+	Store the parse name in the model so that we do not have to use
+	path or uri condtionally to the fact that the file is local or remote.
+
+2008-05-03  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab.c:
+	* src/baobab.h:
+	* src/baobab-scan.c:
 	get the display name from gio instead of manually getting the basename.
 	Also be robust to the fact that remote files have no path, so that
 	needs to be checked before comparin with "/proc".
